--- a/business-intelligence/bi-tools.html
+++ b/business-intelligence/bi-tools.html
@@ -111,6 +111,21 @@
                         <p>
                             Modern BI platforms have accelerated time-to-insight, democratized access to advanced analytics, and improved collaboration across business units. Organizations that invest strategically in BI, data literacy, and data governance achieve higher innovation rates, data-driven decision-making, and outperform peers in operational efficiency and revenue growth<sup>[3],[4]</sup>.
                         </p>
+                        <h3>References</h3>
+                        <ol>
+                        <li>
+                            Gartner. (2024). <em>Magic Quadrant for Analytics and Business Intelligence Platforms</em>.
+                        </li>
+                        <li>
+                            Forrester. (2023). <em>The Forrester Wave™: Augmented BI Platforms, Q2 2023</em>.
+                        </li>
+                        <li>
+                            IDC. (2023). <em>Worldwide Business Intelligence and Analytics Platform Market Shares, 2023</em>.
+                        </li>
+                        <li>
+                            Barton, D. & Court, D. (2023). "Why Data Culture Matters." <em>Harvard Business Review</em>. 
+                        </li>
+                        </ol>
                     </div>
                     <footer>
                         <a href="../index.html#three" class="button">Back to Business Intelligence</a>
