--- a/business-intelligence/performance-management.html
+++ b/business-intelligence/performance-management.html
@@ -132,7 +132,7 @@ def process_feedback(feedback_texts):
                                 Calvo, R. A., D’Mello, S. K., Gratch, J., & Kappas, A. (2023). "Affective Computing and Emotional Analytics," <em>Annual Review of Psychology</em>, 74, 95–129.
                             </li>
                             <li>
-                                IBM Research. (2024). "Responsible Use of AI for Employee Wellbeing Monitoring." <a href="https://www.ibm.com/policy/ai-ethics" target="_blank" rel="noopener">[Open Access]</a>
+                                IBM Research. (2024). "Responsible Use of AI for Employee Wellbeing Monitoring."
                             </li>
                         </ol>
                     </div>
