--- a/business-intelligence/performance-management.html
+++ b/business-intelligence/performance-management.html
@@ -99,7 +99,7 @@ def process_feedback(feedback_texts):
                         <h3>References</h3>
                         <ol>
                             <li>
-                                Cahill, E., & Cook, W. (2024). "Performance Management for the Hybrid Workplace," <em>Harvard Business Review</em>.
+                                Behson, S. (2023). "Performance Management for the Hybrid Workplace," <em>Harvard Business Review</em>.
                             </li>
                             <li>
                                 Gartner. (2025). <em>Market Guide for Workforce Performance Management Applications</em>.
