--- a/business-intelligence/bi-tools.html
+++ b/business-intelligence/bi-tools.html
@@ -117,7 +117,7 @@
                             Gartner. (2024). <em>Magic Quadrant for Analytics and Business Intelligence Platforms</em>.
                         </li>
                         <li>
-                            Forrester. (2023). <em>The Forrester Wave™: Augmented BI Platforms, Q2 2023</em>.
+                            Forrester. (2023). <em>The Forrester Wave: Augmented BI Platforms, Q2 2023</em>.
                         </li>
                         <li>
                             IDC. (2023). <em>Worldwide Business Intelligence and Analytics Platform Market Shares, 2023</em>.
