--- a/business-intelligence/bi-tools.html
+++ b/business-intelligence/bi-tools.html
@@ -113,18 +113,10 @@
                         </p>
                         <h3>References</h3>
                         <ol>
-                        <li>
-                            Gartner. (2024). <em>Magic Quadrant for Analytics and Business Intelligence Platforms</em>.
-                        </li>
-                        <li>
-                            Forrester. (2023). <em>The Forrester Wave: Augmented BI Platforms, Q2 2023</em>.
-                        </li>
-                        <li>
-                            IDC. (2023). <em>Worldwide Business Intelligence and Analytics Platform Market Shares, 2023</em>.
-                        </li>
-                        <li>
-                            Barton, D. & Court, D. (2023). "Why Data Culture Matters." <em>Harvard Business Review</em>. 
-                        </li>
+                        <li>Gartner. (2024). <em>Magic Quadrant for Analytics and Business Intelligence Platforms</em>.</li>
+                        <li>Forrester. (2023). <em>The Forrester Wave: Augmented BI Platforms, Q2 2023</em>.</li>
+                        <li>IDC. (2023). <em>Worldwide Business Intelligence and Analytics Platform Market Shares, 2023</em>.</li>
+                        <li>Barton, D. & Court, D. (2023). "Why Data Culture Matters." <em>Harvard Business Review</em>.</li>
                         </ol>
                     </div>
                     <footer>
