--- a/business-intelligence/bi-tools.html
+++ b/business-intelligence/bi-tools.html
@@ -17,7 +17,7 @@
                     </header>
                     <div class="content">
                         <p>
-                            <strong>Business Intelligence (BI)</strong> tools have rapidly evolved over the past several years, shaped by advances in artificial intelligence (AI), cloud computing, and increased demands for real-time, democratized analytics. According to Gartner’s 2024 Magic Quadrant for Analytics and Business Intelligence Platforms, leading BI solutions now offer AI-powered analytics, robust data governance, seamless cloud integrations, and user-friendly self-service capabilities<sup>[1]</sup>.
+                            <strong>Business Intelligence (BI)</strong> tools have rapidly evolved over the past several years, shaped by advances in artificial intelligence (AI), cloud computing, and increased demands for real-time, democratized analytics. According to Gartner’s 2024 Magic Quadrant for Analytics and Business Intelligence Platforms, leading BI solutions now offer AI-powered analytics, robust data governance, seamless cloud integrations, and user-friendly self-service capabilities.
                         </p>
 
                         <h3>Key Components of Modern BI Architectures</h3>
@@ -55,7 +55,7 @@
                         <h4>Augmented Analytics and AI Integration</h4>
                         <ul>
                             <li>
-                                <strong>Natural Language Query (NLQ):</strong> Most leaders now offer advanced NLQ, allowing users to ask questions in simple language and receive visual or narrative answers (e.g., Copilot in Power BI, Tableau Pulse, ThoughtSpot, Qlik Sense Insight Advisor)<sup>[2]</sup>.
+                                <strong>Natural Language Query (NLQ):</strong> Most leaders now offer advanced NLQ, allowing users to ask questions in simple language and receive visual or narrative answers (e.g., Copilot in Power BI, Tableau Pulse, ThoughtSpot, Qlik Sense Insight Advisor).
                             </li>
                             <li>
                                 <strong>Automated Insights:</strong> BI tools automatically identify outliers, trends, and key drivers, reducing manual analysis and enabling data-driven decision-making.
@@ -109,15 +109,9 @@
 
                         <h3>Impact and Maturity</h3>
                         <p>
-                            Modern BI platforms have accelerated time-to-insight, democratized access to advanced analytics, and improved collaboration across business units. Organizations that invest strategically in BI, data literacy, and data governance achieve higher innovation rates, data-driven decision-making, and outperform peers in operational efficiency and revenue growth<sup>[3],[4]</sup>.
+                            Modern BI platforms have accelerated time-to-insight, democratized access to advanced analytics, and improved collaboration across business units. Organizations that invest strategically in BI, data literacy, and data governance achieve higher innovation rates, data-driven decision-making, and outperform peers in operational efficiency and revenue growth.
                         </p>
-                        <h3>References</h3>
-                        <ol>
-                        <li>Gartner. (2024). <em>Magic Quadrant for Analytics and Business Intelligence Platforms</em>.</li>
-                        <li>Forrester. (2023). <em>The Forrester Wave: Augmented BI Platforms, Q2 2023</em>.</li>
-                        <li>IDC. (2023). <em>Worldwide Business Intelligence and Analytics Platform Market Shares, 2023</em>.</li>
-                        <li>Barton, D. & Court, D. (2023). "Why Data Culture Matters." <em>Harvard Business Review</em>.</li>
-                        </ol>
+                        
                     </div>
                     <footer>
                         <a href="../index.html#three" class="button">Back to Business Intelligence</a>
